	  - Improved Drag & Drop handling:
	    - directory drops are now supported;
	    - drops outside the "Source MIDI files" list now create a group;
	    - when directories are dropped, SysEx files precede the rest within each directory;
	    - drops inside the "Source MIDI files" list are position-aware.

2017-04-09:

	1.5.0 released.

	* Updated mt32emu library to version 2.1.0.
	* Moved sample rate conversion feature from mt32emu-qt to the libmt32emu, so it can be easily used in other applications.
	* Added an option to select the renderer type in the synth properties (preserved in the profile).

2016-10-22:

	1.4.0 released.

	* Updated mt32emu library to version 2.0.0.
	* Added support of ALSA raw MIDI ports in ALSA MIDI driver. Configuration option mt32emu-qt_WITH_ALSA_MIDI_DRIVER
	  renamed to mt32emu-qt_WITH_ALSA_MIDI_SEQUENCER for consistency, and is now set to TRUE by default on Linux systems only.
	* Added handling of fragmented SysExes in ALSA MIDI driver.
	* Improved CoreAudio driver: CoreAudioStream no longer renders data in the GUI thread, a dedicated internal AudioQueue thread is used instead.
	* Improved MIDI timing calculations. Introduced MIDI latency autodetection mode (initiated by setting MIDI latency to 0).
	* Added build option mt32emu-qt_WITH_DEBUG_WINCONSOLE. It controls whether a debugging console is shown on Windows.
	* Fixed a bug in LinearResampler that may cause incorrect output at beginning of each audio block.
	* Introduced full-featured internal resampler. The intention is to make resampling less demanding than libsamplerate requires
	  yet to reduce the processing delay libsoxr introduces. That's achieved by taking advantage of oversampled output produced
	  by analog circuit emulation engine and using efficient elliptic low-pass filter instead of FFT-based FIR.
	* Added build option mt32emu-qt_WITH_INTERNAL_RESAMPLER. It controls whether to use internal resampler or try to find an external library.
	* Added support for Qt5.